--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "gatsby-cli": "^2.4.3",
     "gatsby-image": "^2.0.14",
     "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-netlify-cms-paths": "^1.1.0",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-prismjs": "^3.0.2",
+    "gatsby-remark-relative-images": "^0.2.0",
+    "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.3",
