--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,9 +12,15 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
+      - {label: "Path", name: "path", widget: "string"}
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Draft", name: "draft", widget: "boolean", default: true}
+      - {label: "Tags", name: "tags", widget: "list", default: ["recipe"]}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Featured Image Alt Text", name: "thumbnailAlt", widget: "string"}
       - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Align Content", name: "align", widget: "select", options: ["left", "center", "right"]}
