--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "gatsby": "^2.0.19",
     "gatsby-cli": "^2.4.3",
     "gatsby-image": "^2.0.14",
+    "gatsby-plugin-layout": "^1.0.3",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-netlify": "^2.0.1",
     "gatsby-plugin-netlify-cms-paths": "^1.1.0",
     "gatsby-plugin-netlify-identity-widget": "^1.1.1",
     "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-page-transitions": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
     "gatsby-plugin-styled-components": "^3.0.0",
