--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,10 +15,12 @@ collections:
       - {label: "Path", name: "path", widget: "string"}
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Draft", name: "draft", widget: "boolean", default: true}
       - {label: "Tags", name: "tags", widget: "list", default: ["recipe"]}
+      - {label: "Allergies", name: "allergies", widget: "list", default: []}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Featured Image Alt Text", name: "thumbnailAlt", widget: "string"}
       - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
