--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
     "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-embed-video": "^1.4.0",
     "gatsby-remark-images": "^2.0.4",
@@ -33,7 +34,11 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-transition-group": "^2.5.0",
-    "styled-components": "^3.4.10"
+    "react-typography": "^0.16.13",
+    "styled-components": "^3.4.10",
+    "typography": "^0.16.17",
+    "typography-theme-grand-view": "^0.15.10",
+    "typography-theme-stern-grove": "^0.15.10"
   },
   "keywords": [
     "gatsby"
