adding relations to config 4

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -47,4 +47,6 @@ collections:
         entry: title
         searchFields: ['title']
         multiselect: true
+        valueField: "title"
+        displayFields: ["title", "path"]
 
