adding relations to config 5

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -47,6 +47,6 @@ collections:
         entry: title
         searchFields: ['title']
         multiselect: true
-        valueField: "title"
+        valueField: ["title", "path", "description"]
         displayFields: ["title", "path"]
 
