--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -40,13 +40,8 @@ collections:
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Featured Image Alt Text", name: "thumbnailAlt", widget: "string"}
-      - name: menuitems
-        label: MenuItems
-        widget: relation
-        collection: menu
-        entry: title
-        searchFields: ['title']
-        multiselect: true
-        valueField: ["title", "path", "description"]
-        displayFields: ["title", "path"]
+      - {required: false, name: menuitemtitle,label: MenuItemsTitle,widget: relation,collection: menu,
+        entry: title,searchFields: ['title'],multiselect: true,valueField: "title",displayFields: ["title"]}
+      - {required: false, name: menuitemdesc,label: MenuItemsDesc,widget: relation,collection: menu,
+        entry: description,searchFields: ['title'],multiselect: true,valueField: "description",displayFields: ["title"]}
 
