adding relations to config 8

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,8 +19,10 @@ collections:
       - {label: "Slug", name: "slug", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Draft", name: "draft", widget: "boolean", default: true}
-      - {label: "InStock", name: "instock", widget: "boolean", default: true}
-      - {label: "Allergies", name: "allergies", widget: "list", default: []}
+      - {label: "MenuSection", name: "menusection", widget: "select", options: ["entrees", "mains"]}
+      - {label: "Price", name: "price", widget: "string"}
+      - {required: false, label: "GlutenFree", name: "glutenfree", widget: "boolean", default: false}
+      - {required: false, label: "OutofStock", name: "outofstock", widget: "boolean", default: false}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Featured Image Alt Text", name: "thumbnailAlt", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
