--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,17 +15,30 @@ collections:
       - {label: "Path", name: "path", widget: "string"}
       - {label: "Layout", name: "layout", widget: "hidden", default: "menu"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
+      - {label: "Description", name: "description", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Draft", name: "draft", widget: "boolean", default: true}
-      - {label: "MenuSection", name: "menusection", widget: "select", options: ["entrees", "mains"]}
+      - {label: "MenuSection", name: "menusection", widget: "select", options: ["entrees", "mains", "specials"], required: false}
       - {label: "Price", name: "price", widget: "string"}
+      - {label: "Discount", name: "discount", widget: "string"}
       - {label: "GlutenFree", name: "glutenfree", widget: "boolean", default: false}
       - {label: "OutofStock", name: "outofstock", widget: "boolean", default: false}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Featured Image Alt Text", name: "thumbnailAlt", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+
+  - name: "sale"
+    label: "Sale"
+    folder: "src/pages/sale"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - {label: "Path", name: "path", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "sale"}
+      - {label: "Start Date", name: "startdate", widget: "datetime"}
+      - {label: "End Date", name: "enddate", widget: "datetime"}
 
   - name: "blog"
     label: "Blog"
