--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "gatsby-transformer-remark": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.3",
     "react": "^16.5.1",
+    "react-cookie-banner": "^4.0.0",
+    "react-cookie-consent": "^1.8.0",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-transition-group": "^2.5.0",
