--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-transition-group": "^2.5.0",
     "react-typography": "^0.16.13",
     "styled-components": "^3.4.10",
+    "typeface-merriweather": "0.0.54",
     "typography": "^0.16.17",
     "typography-theme-grand-view": "^0.15.10",
     "typography-theme-stern-grove": "^0.15.10"
