--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,12 +9,18 @@ collections:
   - label: "Pages"
     name: "pages"
     files:
-      - label: "Privacy Page"
-        name: "privacy"
-        file:  "src/pages/privacy.js"
+      - label: "About Page"
+        name: "about"
+        file: "src/pages/about.yml"
         fields:
           - {label: Title, name: title, widget: string}
-          - {label: Statement, name: statement, widget: markdown}
+          - {label: Intro, name: intro, widget: markdown}
+      - label: "Locations Page"
+        name: "locations"
+        file: "site/content/locations.yml"
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Intro, name: intro, widget: markdown}
 
   - name: "menu" # Used in routes, e.g., /admin/collections/blog
     label: "Menu" # Used in the UI
