--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,9 +9,9 @@ collections:
   - label: "Pages"
     name: "pages"
     files:
-      - label: "About Page"
-        name: "about"
-        file: "src/pages/ab.js"
+      - label: "Privacy Page"
+        name: "privacy"
+        file: "src/pages/privacy.js"
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Intro, name: intro, widget: markdown}
