--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,7 +11,7 @@ collections:
     files:
       - label: "Privacy Page"
         name: "privacy"
-        file: "src/pages/privacy.js"
+        file: "src/pages/privacy.json"
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Intro, name: intro, widget: markdown}
