--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.3",
+    "gatsby-transformer-json": "^2.1.4",
     "gatsby-transformer-remark": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.3",
     "react": "^16.5.1",
