added netlify privacy page 7

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,11 +11,11 @@ collections:
     files:
       - label: "Privacy Page"
         name: "privacy"
-        file: "src/pages/pages/privacy.json"
+        file: "src/pages/pages/privacy.md"
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Path, name: path, widget: string}
-          - {label: Intro, name: intro, widget: markdown}
+          - {label: Body, name: body, widget: markdown}
 
   - name: "menu" # Used in routes, e.g., /admin/collections/blog
     label: "Menu" # Used in the UI
